<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackgroundLogin"
    tools:context="studio.crazybt.travincity.views.imple.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_background_login"
        android:id="@+id/ivAppName_acLogin"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_below="@+id/ivAppName_acLogin"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:hint="@string/etUsername_hint"
        android:id="@+id/etUsername_acLogin"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etUsername_acLogin"
        android:hint="@string/etPassword_hint"
        android:inputType = "textPassword"
        android:id="@+id/etPassword_acLogin"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/etPassword_acLogin"
        android:textColor="@color/colorBackgroundLogin"
        android:text="@string/btnLogin"
        android:onClick="btnLogin_onClick"
        android:id="@+id/btnLogin_acLogin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin_acLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/tvOr"
        android:id="@+id/tvOr_acLogin"/>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnLoginFacebook_acLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOr_acLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnLoginFacebook_acLogin"
        android:text="@string/tvSignup"
        android:textColor="@color/colorPrimary"
        android:onClick="tvSignup_onClick"
        android:id="@+id/tvSignup_acLogin"
        android:textSize="15sp"/>
    <ProgressBar
        android:layout_below="@+id/tvSignup_acLogin"
        android:id="@+id/pbWaitingLogin_acLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:text="@string/tvForgetPassword"
        android:id="@+id/tvForgetPassword_acLogin"
        android:onClick="tvForgetPassword_onClick"/>

</RelativeLayout>
