<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout     xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@color/colorBackgroundLogin"
                tools:context="studio.crazybt.travincity.views.imple.SignupActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_background_login"
        android:id="@+id/ivAppName_acSignup"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivAppName_acSignup"
        android:layout_marginTop="10dp"
        android:text="@string/tvSignupLabel"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/tvSignupLabel_acSignup"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnLoginFacebook_acSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSignupLabel_acSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnLoginFacebook_acSignup"
        android:text="@string/tvOr"
        android:id="@+id/tvOr_acSignup"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_below="@+id/tvOr_acSignup"
        android:layout_height="40dp"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:hint="@string/etUsername_hint"
        android:id="@+id/etUsername_acSignup"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/etUsername_acSignup"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:hint="@string/etPassword_hint"
        android:inputType = "textPassword"
        android:id="@+id/etPassword_acSignup"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/etPassword_acSignup"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:hint="@string/etEmail"
        android:id="@+id/etEmail_acSignup"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail_acSignup"
        android:layout_marginTop="5dp"
        android:text="@string/tvTermsOfService"
        android:id="@+id/cbTermOfSevices_acSignup"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/cbTermOfSevices_acSignup"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/tvSignupLabel"
        android:textColor="@color/colorBackgroundLogin"
        android:onClick="btnSignup_onClick"
        android:id="@+id/btnRegister_acSignup"/>
    <ProgressBar
        android:layout_below="@+id/btnRegister_acSignup"
        android:id="@+id/pbWaitingRegister_acSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>